# sm_tracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.py  build.sh  toolchain.cmake
application/: application.c  application.h  blinky.c  blinky.h  gui_mngr.c  gui_mngr.h  hack_nerd_font_regular.c  lvgl_gui.c  lvgl_gui.h  main.c  qp_config.h  snmtt_hldc_parser.c  snmtt_hldc_parser.h  snmtt_itoa.c  snmtt_itoa.h  snmtt_json_parser.c  snmtt_json_parser.h  sp_mngr.c  sp_mngr.h  spthread_evt.h
bsp/: bsp.c  bsp.h
bsp/lvgl/: bsp_lvgl.h  bsp_lvgl_disp.c  bsp_lvgl_indev.c
bsp/sdl/: bsp_sdl.c  bsp_sdl_msgbuf.c  bsp_sdl_msgbuf.h
bsp/serial_port/: bsp_serial_port.c  bsp_serial_port.h
doc/: serial_port_tool.md
include/: README.md  qequeue.h  qk.h  qmpool.h  qp.h  qp_pkg.h  qpc.h  qs_dummy.h  qsafe.h  qstamp.h  qv.h
ports/: qf_port.c  qp_port.h  sm_port.h
qm_model/: .snmtt  snmtt.qm
src/qf/: qep_hsm.c  qep_msm.c  qf_act.c  qf_actq.c  qf_defer.c  qf_dyn.c  qf_mem.c  qf_ps.c  qf_qact.c  qf_qeq.c  qf_qmact.c  qf_time.c
